[gd_scene load_steps=17 format=2]

[ext_resource path="res://sprites/Boss/witch/Witch_5.png" type="Texture" id=1]
[ext_resource path="res://scripts/InduWitch.gd" type="Script" id=2]
[ext_resource path="res://sound/fx/Sound/WitchSound/WitchWalk.mp3" type="AudioStream" id=3]
[ext_resource path="res://fonts/CONSOLA.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://sound/fx/Sound/WitchSound/WitchAtk.mp3" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40.3702, 22.5736 )

[sub_resource type="Animation" id=45]
resource_name = "Atk"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("BossMain:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17, 18, 27 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "dmg_atk"
}, {
"args": [  ],
"method": "wait_atk_finished"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("FX")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 1.20576,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=43]
resource_name = "Idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BossMain:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=44]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BossMain:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=46]
resource_name = "Run"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BossMain:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35 ]
}

[sub_resource type="DynamicFont" id=41]
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=31]
bg_color = Color( 0.372549, 0.811765, 0.423529, 1 )

[sub_resource type="StyleBoxFlat" id=30]
bg_color = Color( 0.568627, 0.258824, 0.227451, 1 )

[sub_resource type="DynamicFont" id=42]
size = 15
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=47]
extents = Vector2( 54.6805, 49.8329 )

[sub_resource type="CircleShape2D" id=48]
radius = 927.689

[node name="InduWitch" type="KinematicBody2D"]
position = Vector2( 0, -10 )
scale = Vector2( 0.507713, 0.507713 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3.05176e-05 )
shape = SubResource( 1 )

[node name="BossMain" type="Sprite" parent="."]
position = Vector2( -5.90884, -210.749 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 1 )
hframes = 4
vframes = 14
frame = 1
region_rect = Rect2( 7, 13, 765.702, 155.173 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Atk = SubResource( 45 )
anims/Idle = SubResource( 43 )
anims/RESET = SubResource( 44 )
anims/Run = SubResource( 46 )

[node name="HP" type="ProgressBar" parent="."]
margin_left = -94.7299
margin_top = 35.4534
margin_right = 0.270157
margin_bottom = 52.4534
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 41 )
custom_styles/fg = SubResource( 31 )
custom_styles/bg = SubResource( 30 )
max_value = 90.0
value = 90.0

[node name="BossName" type="RichTextLabel" parent="."]
margin_left = -127.575
margin_top = 76.1604
margin_right = 10.4247
margin_bottom = 93.1604
rect_scale = Vector2( 2, 2 )
custom_fonts/normal_font = SubResource( 42 )
bbcode_enabled = true
bbcode_text = "[center]Inducing Witch"
text = "Inducing Witch"
scroll_active = false

[node name="AtkArea" type="Area2D" parent="."]
position = Vector2( 0.449829, -4.48111 )
collision_layer = 2
collision_mask = 2
monitorable = false

[node name="AtkAreaShape" type="CollisionShape2D" parent="AtkArea"]
position = Vector2( -55.618, 0.77076 )
shape = SubResource( 47 )

[node name="SummonArea" type="Area2D" parent="."]
position = Vector2( 0.449829, -4.98108 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SummonArea"]
position = Vector2( -0.449829, -0.927795 )
shape = SubResource( 48 )

[node name="FX" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0.449829, -50.9811 )
volume_db = -10.0

[node name="BGM" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0.449829, -50.9811 )
stream = ExtResource( 3 )
volume_db = -10.0
autoplay = true

[connection signal="body_entered" from="AtkArea" to="." method="_on_AtkArea_body_entered"]
[connection signal="body_exited" from="AtkArea" to="." method="_on_AtkArea_body_exited"]
[connection signal="body_entered" from="SummonArea" to="." method="_on_SummonArea_body_entered"]
[connection signal="body_exited" from="SummonArea" to="." method="_on_SummonArea_body_exited"]
